update section about

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             />
           </div>
         </section>
-        <section class="about">
+        <section id="about">
           <div class="about__image">
             <img
               class="about__image-img"
@@ -108,7 +108,7 @@
           </div>
         </section>
       </div>
-      <div class="expertise__container">
+      <div id="expertise__container">
         <section class="expertise expertise--bg-apple">
           <div class="expertise__description">
             <div class="hidden">Hidden</div>
