--- a/index.html
+++ b/index.html
@@ -191,36 +191,41 @@
           </div>
         </div>
       </section>
+
       <div class="gallery">
-        <div class="gallery__item">
+        <div id="gallery__item1">
+          <div class="gallery__item">
           <img
             src="./images/desktop/image-gallery-milkbottles.jpg"
             alt="image  of milk bottles"
             class="gallery__picture"
           />
-        </div>
+          </div>
 
-        <div class="gallery__item">
+          <div class="gallery__item">
           <img
             src="./images/desktop/image-gallery-orange.jpg"
             alt="Banner image for mobile"
             class="gallery__picture"
           />
-        </div>
-
-        <div class="gallery__item">
-          <img
-            src="./images/desktop/image-gallery-cone.jpg"
-            alt="Banner image for mobile"
-            class="gallery__picture"
-          />
-        </div>
-        <div class="gallery__item">
-          <img
-            src="./images/desktop/image-gallery-sugarcubes.jpg"
-            alt="Banner image for mobile"
-            class="gallery__picture"
-          />
+          </div>
+       </div>
+        
+        <div id="gallery__item2">
+          <div class="gallery__item">
+            <img
+              src="./images/desktop/image-gallery-cone.jpg"
+              alt="Banner image for mobile"
+              class="gallery__picture"
+            />
+          </div>
+          <div class="gallery__item">
+            <img
+              src="./images/desktop/image-gallery-sugarcubes.jpg"
+              alt="Banner image for mobile"
+              class="gallery__picture"
+            />
+          </div>
         </div>
       </div>
     </main>
