--- a/index.html
+++ b/index.html
@@ -193,36 +193,38 @@
       </section>
 
       <div class="gallery">
-      
-        <div class="gallery__item">
+        <div class="gallery1">
+          <div class="gallery__item">
           <img
             src="./images/desktop/image-gallery-milkbottles.jpg"
             alt="image  of milk bottles"
             class="gallery__picture"
           />
-        </div>
+          </div>
 
-        <div class="gallery__item">
+          <div class="gallery__item">
           <img
             src="./images/desktop/image-gallery-orange.jpg"
             alt="Banner image for mobile"
             class="gallery__picture"
           />
+          </div>
         </div>
-      
-        <div class="gallery__item">
+        <div class="gallery2">
+          <div class="gallery__item">
           <img
               src="./images/desktop/image-gallery-cone.jpg"
               alt="Banner image for mobile"
               class="gallery__picture"
           />
-        </div>
-        <div class="gallery__item">
+          </div>
+          <div class="gallery__item">
           <img
               src="./images/desktop/image-gallery-sugarcubes.jpg"
               alt="Banner image for mobile"
               class="gallery__picture"
           />
+          </div>
         </div>
       </div>
     </main>
