--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </svg>
         </div>
       </section>
-      <div class="section__container">
+     <div class="section__container">
         <section class="about">
           <div class="about__description">
             <div class="description__container">
@@ -85,7 +85,8 @@
             />
           </div>
         </section>
-        <section id="about">
+        
+        <section id="about" class="about">
           <div class="about__image">
             <img
               class="about__image-img"
@@ -102,13 +103,12 @@
                 extend your brand in digital places
               </p>
               <a class="about__link about__link--color-pink" href="http://"
-                >Learn more</a
-              >
+                >Learn more</a>
             </div>
           </div>
         </section>
       </div>
-      <div id="expertise__container">
+      <div id="expertise__container" class="expertise__container">
         <section class="expertise expertise--bg-apple">
           <div class="expertise__description">
             <div class="hidden">Hidden</div>
@@ -191,52 +191,90 @@
           </div>
         </div>
       </section>
-
       <div class="gallery">
-        <div class="gallery1">
-          <div class="gallery__item">
+        <div class="gallery__item">
           <img
             src="./images/desktop/image-gallery-milkbottles.jpg"
             alt="image  of milk bottles"
             class="gallery__picture"
           />
-          </div>
+        </div>
 
-          <div class="gallery__item">
+        <div class="gallery__item">
           <img
             src="./images/desktop/image-gallery-orange.jpg"
             alt="Banner image for mobile"
             class="gallery__picture"
           />
-          </div>
         </div>
-        <div class="gallery2">
-          <div class="gallery__item">
+
+        <div class="gallery__item">
           <img
-              src="./images/desktop/image-gallery-cone.jpg"
-              alt="Banner image for mobile"
-              class="gallery__picture"
+            src="./images/desktop/image-gallery-cone.jpg"
+            alt="Banner image for mobile"
+            class="gallery__picture"
           />
-          </div>
-          <div class="gallery__item">
+        </div>
+        <div class="gallery__item">
           <img
-              src="./images/desktop/image-gallery-sugarcubes.jpg"
-              alt="Banner image for mobile"
-              class="gallery__picture"
+            src="./images/desktop/image-gallery-sugarcubes.jpg"
+            alt="Banner image for mobile"
+            class="gallery__picture"
           />
-          </div>
         </div>
       </div>
+      <!-- mobile gallery -->
+      <div class="gmobile">
+        <div class="gallery__item">
+          <img
+            src="./images/mobile/image-gallery-milkbottles.jpg"
+            alt="image  of milk bottles"
+            class="gallery__picture"
+          />
+        </div>
+
+        <div class="gallery__item">
+          <img
+            src="./images/mobile/image-gallery-orange.jpg"
+            alt="Banner image for mobile"
+            class="gallery__picture"
+          />
+        </div>
+
+        <div class="gallery__item">
+          <img
+            src="./images/mobile/image-gallery-cone.jpg"
+            alt="Banner image for mobile"
+            class="gallery__picture"
+          />
+        </div>
+        <div class="gallery__item">
+          <img
+            src="./images/mobile/image-gallery-sugar-cubes.jpg"
+            alt="Banner image for mobile"
+            class="gallery__picture"
+          />
+        </div>
+      </div>
+
     </main>
     <footer class="footer">
       <img src="./images/svg/logo2.svg" alt="logo" class="footer__logo" />
-
       <div class="footer__nav">
         <ul class="footer__list">
           <li class="footer__item"><a href="#about">About</a></li>
           <li class="footer__item"><a href="#services">Services</a></li>
           <li class="footer__item"><a href="#projects">Projects</a></li>
         </ul>
+      </div>
+      <div class="logo__svg">
+          <ul class="ulbouton">
+            <li><a href=""><img src="./images/svg/icon-facebook.svg" alt="Facebook"></a></li>
+            <li><a href=""><img src="./images/svg/icon-instagram.svg" alt="Instagram"></a></li>
+            <li><a href=""><img src="./images/svg/icon-twitter.svg" alt="Twitter"></a></li>
+            <li><a href=""><img src="./images/svg/icon-pinterest.svg" alt="Pinterest"></a></li>
+          </ul>
+      </div> 
     </footer>
   </body>
 </html>
