--- a/index.html
+++ b/index.html
@@ -268,13 +268,12 @@
         </ul>
       </div>
       <div class="logo__svg">
-          <ul class="ulbouton">
-            <li><a href=""><img src="./images/svg/icon-facebook.svg" alt="Facebook"></a></li>
-            <li><a href=""><img src="./images/svg/icon-instagram.svg" alt="Instagram"></a></li>
-            <li><a href=""><img src="./images/svg/icon-twitter.svg" alt="Twitter"></a></li>
-            <li><a href=""><img src="./images/svg/icon-pinterest.svg" alt="Pinterest"></a></li>
-          </ul>
-      </div> 
+            <div class="ulbouton"><a href="#"><img src="./images/svg/icon-facebook.svg" alt="Facebook"></a></div>
+            <div class="ulbouton"><a href="#"><img src="./images/svg/icon-instagram.svg" alt="Instagram"></a></div>
+            <div class="ulbouton"><a href="#"><img src="./images/svg/icon-twitter.svg" alt="Twitter"></a></div>
+            <div class="ulbouton"><a href="#"><img src="./images/svg/icon-pinterest.svg" alt="Pinterest"></a></div>
+          
+      </div>
     </footer>
   </body>
 </html>
