--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
      <div class="section__container">
         <section class="about">
           <div class="about__description">
-            <div class="description__container">
+          
               <h2 class="about__title">Transform Your Brand</h2>
               <p class="about__text">
                 We are a full-service creative agency specializing in helping
@@ -102,8 +102,7 @@
                 photographer, videographers, and copywriters, we'll build and
                 extend your brand in digital places
               </p>
-              <a class="about__link about__link--color-pink" href="http://"
-                >Learn more</a>
+              <a class="about__link about__link--color-pink" href="http://">Learn more</a>
             </div>
           </div>
         </section>
